adds additional statis markup

--- a/index.html
+++ b/index.html
@@ -15,19 +15,43 @@
     <header>
         <h1>PokeGallery</h1>
     </header>
-    <main>
-        <section id="collection">
-            <article class="card">
-                <h3>Bulbsaur</h3>
+    <main class="flex-ctr">
+        <section class="flex-ctr" id="collection">
+            <article class="card flex-ctr">
+                <h3>Bulbasaur</h3>
             </article>
-            <article class="card">
-                <h3>Bulbsaur</h3>
+            <article class="card flex-ctr">
+                <h3>Bulbasaur</h3>
             </article>
-            <article class="card">
-                <h3>Bulbsaur</h3>
+            <article class="card flex-ctr">
+                <h3>Bulbasaur</h3>
             </article>
-            <article class="card">
-                <h3>Bulbsaur</h3>
+            <article class="card flex-ctr">
+                <h3>Bulbasaur</h3>
+            </article>
+            <article class="card flex-ctr">
+                <h3>Bulbasaur</h3>
+            </article>
+            <article class="card flex-ctr">
+                <h3>Bulbasaur</h3>
+            </article>
+            <article class="card flex-ctr">
+                <h3>Bulbasaur</h3>
+            </article>
+            <article class="card flex-ctr">
+                <h3>Bulbasaur</h3>
+            </article>
+            <article class="card flex-ctr">
+                <h3>Bulbasaur</h3>
+            </article>
+            <article class="card flex-ctr">
+                <h3>Bulbasaur</h3>
+            </article>
+            <article class="card flex-ctr">
+                <h3>Bulbasaur</h3>
+            </article>
+            <article class="card flex-ctr">
+                <h3>Bulbasaur</h3>
             </article>
         </section>
     </main>
